# mcp-3d-gen

./: .gitignore  README.md  README_CN.md  pyproject.toml
src/model_gen/: __init__.py  server.py
src/model_gen/providers/: __init__.py  hyper3d.py  meshy.py  tripo.py
tests/: test_download_security.py  test_mcp_contract.py
