[project]
name = "mcp-3d-gen"
version = "1.0.0"
description = "MCP server for AI 3D model generation with multiple providers. Supports Tripo3D and Meshy with text-to-3D and image-to-3D."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx[socks]>=0.28.1",
    "mcp>=1.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/model_gen"]

[project.scripts]
model-gen = "model_gen:main"
